--- a/src/components/TodoList/TodoList.css
+++ b/src/components/TodoList/TodoList.css
@@ -16,3 +16,32 @@
    justify-content: center;
    align-items: center;
  }
+
+ 
+
+ .Todolist-Wrapper {
+  display: flex; 
+  width: 50%;
+  height: 50vh;
+  margin: 5px auto;
+  justify-content: center;
+  align-items: center;
+  border-style: solid;
+  border-width: 5px;
+  border-color: rgba(212, 90, 90);
+ }
+ 
+ .Todos {
+   display: inline-block;
+   overflow:scroll;
+   height: 50vh;
+   justify-content: left;
+   width: 50%;
+   border-style: solid;
+   border-right-width: 5px;
+   border-color: rgba(212, 90, 90);
+ }
+
+.Todos h3 {
+  margin-top: 5px;
+}
